--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Animals -- Fiction'
 - !lcsh 'Canada -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Mooswa & Others of the Boundaries
 url: http://www.gutenberg.org/ebooks/42226
